Fix searchline button sizing to fix squish

--- a/frontend/src/components/SearchLine/SearchLine.css
+++ b/frontend/src/components/SearchLine/SearchLine.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 850px;
+  width: 860px;
   height: 60px;
   position: fixed;
   top: 5px;
@@ -42,7 +42,7 @@
 }
 
 #where-container-line {
-  width: 45%;
+  width: 43%;
 }
 
 .search-input-line:hover {
